--- a/views/pendingIssues.pug
+++ b/views/pendingIssues.pug
@@ -54,6 +54,8 @@ head
           li.nav-item
             a.nav-link(style='color: #fff;' href='/addUser') Add User
           li.nav-item
+            a.nav-link(style='color: #fff;' href='/addVendor') Add Vendor
+          li.nav-item
             a.nav-link(style='color: #fff;' href='/addQuotation') Add Quotation
     main#issueDetails.content.px-3.py-2.d-none
       .container-fluid
