--- a/views/assetDetails.pug
+++ b/views/assetDetails.pug
@@ -58,6 +58,8 @@ head
           li.nav-item
             a.nav-link(style='color: #fff;' href='/addUser') Add User
           li.nav-item
+            a.nav-link(style='color: #fff;' href='/addVendor') Add Vendor
+          li.nav-item
             a.nav-link(style='color: #fff;' href='/addQuotation') Add Quotation
     main.content.px-3.py-2
       .container-fluid
