--- a/views/assetHistory.pug
+++ b/views/assetHistory.pug
@@ -56,6 +56,10 @@ head
             a.nav-link.active(style='color: #fff;' aria-current='page' href='/trackIssues') Track Issues
           li.nav-item
             a.nav-link(style='color: #fff;' href='/addUser') Add User
+          li.nav-item
+            a.nav-link(style='color: #fff;' href='/addVendor') Add Vendor
+          li.nav-item
+            a.nav-link(style='color: #fff;' href='/addQuotation') Add Quotation
     main.content.px-3.py-2
       .container-fluid
         .mb-3
