--- a/views/issueDetails.pug
+++ b/views/issueDetails.pug
@@ -54,6 +54,10 @@ head
             a.nav-link.active(style='color: #fff;' aria-current='page' href='/trackIssues') Track Issues
           li.nav-item
             a.nav-link(style='color: #fff;' href='/addUser') Add User
+          li.nav-item
+            a.nav-link(style='color: #fff;' href='/addVendor') Add Vendor
+          li.nav-item
+            a.nav-link(style='color: #fff;' href='/addQuotation') Add Quotation
     main#issueDetail.content.px-3.py-2.d-none
       .container-fluid
         .mb-3
