--- a/views/quotationDetails.pug
+++ b/views/quotationDetails.pug
@@ -56,6 +56,8 @@ html(lang='en', data-bs-theme='dark')
           li.nav-item
             a.nav-link(style='color: #fff;' href='/addUser') Add User
           li.nav-item
+            a.nav-link(style='color: #fff;' href='/addVendor') Add Vendor
+          li.nav-item
             a.nav-link(style='color: #fff;' href='/addQuotation') Add Quotation
     main.content.px-3.py-2
       .container-fluid
