Update addQuotation Screen

--- a/views/addQuotation.pug
+++ b/views/addQuotation.pug
@@ -55,6 +55,8 @@ html(lang='en', data-bs-theme='dark')
             a.nav-link.active(style='color: #fff;' aria-current='page' href='/trackIssues') Track Issues
           li.nav-item
             a.nav-link(style='color: #fff;' href='/addUser') Add User
+          li.nav-item
+            a.nav-link(style='color: #fff;' href='/addVendor') Add Vendor
     main.content.px-3.py-2
       .container-fluid
         .mb-3
