--- a/views/adminPortal.pug
+++ b/views/adminPortal.pug
@@ -227,7 +227,7 @@ head
               |Team
               span.text-danger *
             select#newTeam.form-select(name='team' required='')
-              option(value='' selected='') Select Team
+              option(value='' selected='' disabled='') Select Team
           .mb-3#allocatedToBlock.d-none
             label.form-label(for='allocatedTo') 
             |Allocated To
