--- a/views/quotationDetails.pug
+++ b/views/quotationDetails.pug
@@ -70,7 +70,7 @@ html(lang='en', data-bs-theme='dark')
                   tr
                     th#serial-no(scope='col')(style='background-color:#3c25bf; color:white') Serial No. 
                     th#quotation-name(scope='col')(style='background-color:#3c25bf; color:white') Quotation 
-                    th#action(scope='col')(style='background-color:#3c25bf; color:white') Action
+                    th#action(scope='col')(style='background-color:#3c25bf; color:white;width:490px') Action
                 tbody
 
 
