--- a/views/addQuotation.pug
+++ b/views/addQuotation.pug
@@ -5,8 +5,9 @@ html(lang='en', data-bs-theme='dark')
   link(rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css')
   script(src='https://kit.fontawesome.com/ae360af17e.js' crossorigin='anonymous')
   link(rel='stylesheet' href='https://cdn.jsdelivr.net/npm/sweetalert2@10/dist/sweetalert2.min.css')
+  
+  link(rel='stylesheet' href='https://cdn.datatables.net/2.0.0/css/dataTables.dataTables.min.css')
   link(rel='stylesheet' href='/css/addQuotation.css')
-  link(rel='stylesheet' href='https:////cdn.datatables.net/2.0.0/css/dataTables.dataTables.min.css')
   script(src='https://code.jquery.com/jquery-3.6.4.min.js')
   style.
     .offcanvas-nav {
@@ -61,7 +62,7 @@ html(lang='en', data-bs-theme='dark')
       .container-fluid
         .mb-3
           h4#role  Vendor Details
-        // Form Element
+        // Table Element
         .table-responsive()
               table#quotation-table.table.table-striped.table-bordered
                 thead.table-primary
@@ -72,7 +73,8 @@ html(lang='en', data-bs-theme='dark')
                     th#vendor-asset-price(scope='col')(style='background-color:#3c25bf; color:white') Vendor Price
                     th#added-by(scope='col')(style='background-color:#3c25bf; color:white') Added By
                     th#added-at(scope='col')(style='background-color:#3c25bf; color:white') Added At
-                    th#action(scope='col')(style='background-color:#3c25bf; color:white') Action
+                    th#action(scope='col')(style='background-color:#3c25bf; color:white;display:flex; width:469px') Action
+                    
                 tbody
 
 // Update Vebdor Details Modal 
@@ -118,9 +120,8 @@ html(lang='en', data-bs-theme='dark')
         button#updateVendorBtn.btn.btn-primary(type='button') Update
 
 
-
-script(src='https://cdn.plot.ly/plotly-latest.min.js')
 script(src='//cdn.datatables.net/2.0.0/js/dataTables.min.js')
+script(src='https://cdn.plot.ly/plotly-latest.min.js')
 script(src='https://widget.cloudinary.com/v2.0/global/all.js' type='text/javascript')
 script(src='https://cdn.jsdelivr.net/npm/sweetalert2@10')
 script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js')
