Register New Asset's Allocated To dropdown updated

--- a/views/employeePortal.pug
+++ b/views/employeePortal.pug
@@ -121,8 +121,8 @@ head
                 |Issue Description
                 span.text-danger *
               textarea#reportIssueDescription.form-control(name='reportIssueDescription' rows='3' required='')
-            button.btn.btn-secondary(type='button' data-bs-dismiss='modal' style='margin-right:10px') Close
-            button.btn.btn-primary(type='submit') Submit
+            button.btn.btn-secondary(type='button' data-bs-dismiss='modal' style='margin-right:-31px;margin-left:303px') Close
+            button.btn.btn-primary(type='submit' style='margin-left:41px') Submit
         .modal-footer
 script(src='/js/employeePortal.js')
 script(src='https://cdn.plot.ly/plotly-latest.min.js')
