--- a/views/quotationDetails.pug
+++ b/views/quotationDetails.pug
@@ -69,7 +69,8 @@ html(lang='en', data-bs-theme='dark')
                 thead.table-primary
                   tr
                     th#serial-no(scope='col')(style='background-color:#3c25bf; color:white') Serial No. 
-                    th#quotation-name(scope='col')(style='background-color:#3c25bf; color:white') Quotation 
+                    th#quotation-name(scope='col')(style='background-color:#3c25bf; color:white') Quotation
+                    th#quotation-date(scope='col')(style='background-color:#3c25bf; color:white')  Created At
                     th#action(scope='col')(style='background-color:#3c25bf; color:white;width:490px') Action
                 tbody
 
